# runna-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_docs.md  check_duplicates.py  common_api_docs.md  pyproject.toml  reference.py  run_tests.py  task.md  test.db  test_unique_constraint.py  types.ts  worker.py
app/: config.py  dependencies.py  main.py
app/api/: executions.py  functions.py  jobs.py  metrics.py  users.py  workspaces.py
app/core/: debug.py  execution_client.py  k8s_client.py  k8s_manifests.py  knative_client.py  mock_k8s_client.py  mock_namespace_manager.py  namespace_manager.py  redis.py  response.py  sanitize.py  security.py  static_analysis.py
app/infra/: async_redis_service.py  deployment_client.py  execution_client.py  metrics_client.py  redis_service.py
app/models/: __init__.py  execution.py  function.py  job.py  user.py  workspace.py
app/schemas/: __init__.py  execution.py  function.py  job.py  message.py  metrics.py  user.py  workspace.py
app/services/: execution_service.py  function_service.py  job_service.py  k8s_service.py  metrics_service.py  user_service.py  workspace_service.py
docs/: api_docs.md  common_api_docs.md  migration.md
migrations/: env.py
migrations/versions/: 20ffe529229f_initial_migration.py  (+11 more)
tests/: conftest.py  test_deployment_logic.py  test_execution.py  test_function_endpoint.py  test_functions.py  test_jobs.py  test_metrics.py  test_namespace_validation.py  test_sanitization.py  test_static_analysis.py  test_workspace_alias.py
worker/: __init__.py  executor.py  main.py  worker.py
(+2 files in other folders)
